force-app/main/default/objects/Resource__c/fields/End_Regular_Working_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Regular_Working_Time__c</fullName>
    <defaultValue>&quot;17:00&quot;</defaultValue>
    <label>End Regular Working Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time</valueSetName>
    </valueSet>
</CustomField>