force-app/main/default/objects/Resource__c/fields/Overtime_Capable__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime Capable</label>
    <type>Checkbox</type>
</CustomField>