force-app/main/default/objects/Resource__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Unit of works per hour</description>
    <label>Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>