force-app/main/default/objects/Resource__c/fields/Start_Regular_Working_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Regular_Working_Time__c</fullName>
    <defaultValue>&quot;08:00&quot;</defaultValue>
    <label>Start Regular Working Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time</valueSetName>
    </valueSet>
</CustomField>