force-app/main/default/objects/Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Regular_Working_Time__c</columns>
    <columns>End_Regular_Working_Time__c</columns>
    <columns>Performance__c</columns>
    <columns>Overtime_Rate__c</columns>
    <columns>Regular_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>